Fix merge derp in AbstractModProvider and logic derp in ModDiscoverer
Signed-off-by: cpw <cpw+github@weeksfamily.ca>